// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown When DropDown as an error Renders correctly the component 1`] = `
.c0 {
  position: relative;
}

.c1 {
  position: absolute;
  top: 1.3rem;
  right: 0;
  margin-right: 1rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #e0151d;
  border-radius: 0.75rem;
  background-color: #ffffff;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c2:disabled {
  background-color: #b0b0b0;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height="20"
    viewBox="0 0 129 129"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"
        fill="black"
      />
    </g>
  </svg>
  <select
    className="c2"
  >
    <option
      label="MM"
      value={null}
    />
    <option
      label="1"
      value="1"
    />
    <option
      label="2"
      value="2"
    />
  </select>
</div>
`;

exports[`DropDown When DropDown is disabled Renders correctly the component 1`] = `
.c0 {
  position: relative;
}

.c1 {
  position: absolute;
  top: 1.3rem;
  right: 0;
  margin-right: 1rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #222222;
  border-radius: 0.75rem;
  background-color: #ffffff;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c2:disabled {
  background-color: #b0b0b0;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height="20"
    viewBox="0 0 129 129"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"
        fill="black"
      />
    </g>
  </svg>
  <select
    className="c2"
    disabled={true}
  >
    <option
      label="MM"
      value={null}
    />
    <option
      label="1"
      value="1"
    />
    <option
      label="2"
      value="2"
    />
  </select>
</div>
`;

exports[`DropDown When DropDown is enabled Renders correctly the component 1`] = `
.c0 {
  position: relative;
}

.c1 {
  position: absolute;
  top: 1.3rem;
  right: 0;
  margin-right: 1rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #e0151d;
  border-radius: 0.75rem;
  background-color: #ffffff;
  padding: 1rem;
  outline: 0;
  width: 100%;
}

.c2:disabled {
  background-color: #b0b0b0;
}

<div
  className="c0"
>
  <svg
    className="c1"
    height="20"
    viewBox="0 0 129 129"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g>
      <path
        d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"
        fill="black"
      />
    </g>
  </svg>
  <select
    className="c2"
    disabled={false}
  >
    <option
      label="MM"
      value={null}
    />
    <option
      label="1"
      value="1"
    />
    <option
      label="2"
      value="2"
    />
  </select>
</div>
`;
